# dbxref

./: .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG  Dockerfile  LICENSE  README.md  README.rst  providers.yaml  requirements.txt  setup.cfg  setup.py
dbxref/: config.py  main.py  providers.yaml  resolver.py  retriever.py
dbxref/retrieve/: enzyme.py  gene_ontology.py  gi.py  hamap.py  interpro.py  ipro.py  kegg.py  pfam.py  pubmed.py  refseq.py  rfam.py  sequence_ontology.py  taxonomy.py  uniprot.py
docs/: Makefile  conf.py  develop-guide.rst  enzymes.rst  gene_ontology.rst  gi.rst  hamap.rst  index.rst  interpro.rst  ipro.rst  kegg.rst  make.bat  pfam.rst  pubmed.rst  refseq.rst  rfam.rst  sequence_ontology.rst  taxonomy.rst  uniprot.rst
docs/source/: conf.py  enzymes.rst  gene_ontology.rst  index.rst  pfam.rst  sequence_ontology.rst  uniprot.rst
scripts/: retrieve_enzyme.py  retrieve_gene_ontology.py  retrieve_pfam.py  retrieve_sequence_ontology.py  retrieve_taxonomy.py  retrieve_uniprot.py  tags.txt
tests/: test_config.py  test_gi.py  test_hamap.py  test_interpro.py  test_kegg.py  test_pfam.py  test_pubmed.py  test_refseq.py  test_resolver.py  test_retriever.py  test_rfam.py  test_uniprot.py
