[metadata]
name = dbxref
author = Lukas Jelonek
author-email = Lukas.Jelonek@computational.bio.uni-giessen.de
description = A library for resolving database cross references
description-file = README.rst
project_urls =
    Source Code = https://git.computational.bio.uni-giessen.de/SOaAS/dbxref
keywords = dbxref
license = MIT

[files]
packages = dbxref

[entry_points]
console_scripts = 
    dbxref = dbxref.main:main
